--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,19 +39,13 @@ application.langs="fr"
 # db.default.password=""
 
 # Local
-# db.default.driver = org.postgresql.Driver
-# db.default.url = "jdbc:postgresql://localhost/nubia"
-# db.default.username = "nubia"
-# db.default.password = "nubia"
-# db.default.jndiName = DefaultDS
-
-
-# Herku
 db.default.driver = org.postgresql.Driver
-db.default.url = "jdbc:postgresql://ec2-54-75-230-117.eu-west-1.compute.amazonaws.com/d33plgnbom5nps?sslmode=require"
-db.default.username = "skthfpzmnqytwc"
-db.default.password = "03fgXbsgQ7RqqXOZaJdOj1Ivdv"
+# db.default.url = "jdbc:postgresql://149.56.133.224/nubia"
+db.default.url = "jdbc:postgresql://localhost/nubia"
+db.default.username = "nubia"
+db.default.password = "nubia"
 db.default.jndiName = DefaultDS
+
 
 # Evolutions
 # ~~~~~
